Stop stats overlapping content (Mobile)

--- a/interfaces/admin/ui/default/assets/css/app.css
+++ b/interfaces/admin/ui/default/assets/css/app.css
@@ -5404,6 +5404,7 @@ label.checklabel{
 #stats{
 	padding:0;
 	margin:0 0 30px 0;
+	overflow:auto;
 }
 
 #stats p{
